# Epsilon-Client

./: .gitignore  CMakeLists.txt  LICENSE  README.md  flake.nix  requirements.txt
src/: Conversation.hpp  Crypto.hpp  DirectMessage.hpp  EpsilonApp.hpp  EpsilonClient.hpp  GroupMessage.hpp  Message.hpp  RNPWrapper.hpp  User.hpp  main.cpp  main.py
src/components/: CenterContent.hpp  HeaderPanel.hpp  InputPanel.hpp  LeftPanel.hpp  MainPanel.hpp  MessageInput.hpp  RightPanel.hpp  SidebarLeft.hpp  SidebarRight.hpp  TitleBar.hpp
